--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FLORESTA AMAZÔNICA</title>
+    <title>Poluição/title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>FLORESTA AMAZÔNICA</h1>
+        <h1>Poluição</h1>
         <img src="FlorestaAmazonica.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
-        <p>Floresta Amazônica é a maior floresta equatorial do mundo. Ela se estende por nove territórios da América do Sul, com aproximadamente 62% de sua área situados no Brasil. A Floresta Amazônia é detentora de uma enorme biodiversidade, composta por milhões de espécies de animais e plantas, muitas das quais ainda não foram catalogadas. Importante para a população que nela vive e dela depende e também para o clima terrestre, a Floresta Amazônica sofre com graves problemas ambientais, como as queimadas e o desmatamento.
-
+        <pPoluição é uma degradação do ambiente que causa efeito nocivo ao meio ambiente e aos seres vivos que ali se desenvolvem
             </p>
         <nav>
             <ul>
-                <li><a href="#problemas"> BIODIVERSIDADE</a></li>
+                <li><a href="#problemas"> TIPOS DE POLUIÇÃO</a></li>
                 <li><a href="#consequencias">IMPORTÂNCIA</a></li>
                 <li><a href="#conclusao">CONCLUSÃO</a></li>
             </ul>
@@ -26,13 +25,13 @@
  <!-- código omitido -->
 
  <main>
-    <section id="BIODIVERSIDADE" class="conteudo">
+    <section id="Tipos de Poluição" class="conteudo">
         <h2>BIODIVERSIDADE</h2>
         <article>
-            <h3>A Floresta Amazônica abriga uma imensa biodiversidade, que corresponde a aproximadamente 10% de toda a vida animal e vegetal presente no planeta.
+            Poluição do ar: causada por gases e partículas liberados por indústrias, veículos, queima de combustíveis fósseis, entre outros. Pode levar a problemas respiratórios, doenças cardiovasculares e contribuir para o efeito estufa.
 
-</h3>
-            <p>Abaixo vamos conhecer em mais detalhes a composição da fauna e da flora da Floresta Amazônica.
+        </h3>
+            <p>A poluição do ar é provocada por uma mistura de substâncias químicas, lançadas no ar ou resultantes de reações químicas, que alteram o que seria a constituição natural da atmosfera.
 
             </p>
         </article>
@@ -58,7 +57,9 @@
         </article>
 
         <article>
-            <h3>Flora da Floresta Amazônica
+            <h3>Poluição da água: decorrente do descarte de resíduos industriais, domésticos e agrícolas em rios, lagos e oceanos. Pode afetar a saúde humana, matar espécies aquáticas e alterar os ecossistemas aquáticos.
+
+
 
                </h3>
             <p>Mais de 30 mil espécies de vegetais compõem a flora da Floresta Amazônica, formada por árvores de dezenas de metros de altura e algumas centenas de anos de idade.
@@ -79,13 +80,12 @@
     </section>
 
     <section id="consequencias" class="conteudo">
-        <h2>Importância da Floresta Amazônica para o planeta
+        <h2>Importância de previnir a poluição
 
             </h2>
         <ul>
-            <li>Ela é essencial para a biodiversidade terrestre.</li>
-            <li>Estima-se que, ao menos, 1,5 milhão desses habitantes pertençam a povos indígenas. A floresta é, então, a fonte de sustento e subsistência para uma parcela grande da população regional, que possui a sua cultura própria intimamente atrelada à Amazônia. 
-</li>
+            <li>A prevenção da poluição é crucial para a saúde humana, a preservação do meio ambiente e a sustentabilidade do planeta. </li>
+            <li>Os efeitos nocivos da poluição têm sido cada vez mais evidentes, como o aumento de doenças respiratórias, problemas cardiovasculares, desequilíbrios climáticos e danos à biodiversidade.
             <li>Uma enorme quantidade de água é devolvida à atmosfera pela Floresta Amazônica todos os dias por meio dos processos de evapotranspiração, o que a torna fundamental para a regulação das temperaturas e dos climas locais e regionais, exercendo ainda influência em escala territorial mais ampla.</li>
             
         </ul>
